--- a/index.html
+++ b/index.html
@@ -91,14 +91,13 @@
 
   <section id="about">
     <h2>Эрүүл амьдрах ухаан гэж юу вэ?</h2>
-    <p>Монголчууд эртнээс малчин аж ахуй, байгальд ойр амьдралаар эрүүл, тэнцвэртэй амьдрах арга ухааныг уламжлуулж хэрэглэж ирсэн. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдарлын хэв маяг, сэтгэл санаагаа удирдах гэх мэт олон зүйлс багтдаг.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Mongolian_ger.jpg/640px-Mongolian_ger.jpg" alt="Монгол гэр" class="lesson-img">
-  </section>
+    <p>Монголчууд эртнээс малчин ахуй, байгальд ойр амьдралаар эрүүл, тэнцвэртэй амьдрах арга ухааныг уламжлуулж хэрэглэж ирсэн. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдралын хэв маяг, сэтгэл зүйгээ зөв удирдах гэх мэт олон зүйлс багтдаг.</p>
+  
 
   <section id="lesson" class="lesson">
     <h2>Хичээл</h2>
-    <p>Доорх хичээлүүдээр дамжуулан уламжлалт эрүүл мэндийн мэдлэгээ нэмэгдүүлээрэй.</p>
-    <img src="https://cdn.pixabay.com/photo/2017/06/19/18/17/mongolia-2419573_1280.jpg" alt="Уламжлалт амьдрал" class="lesson-img">
+    <p>Доорх хичээлүүдээр дамжуулан уламжлалт анагаах ухаанаар эрүүл мэндээ хамгаалаарай.</p>
+  
     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
   </section>
 
