--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
@@ -80,7 +80,7 @@
 <body>
   <header>
     <h1>Монголчуудын Эрүүл Амьдрах Ухаан</h1>
-    <p>Эртнээс уламжлалтай зөв амьдралын хэв маяг</p>
+    <p>Эрүүл бие, саруул ухааны үндэс бол зөв амьдралын хэв маяг</p>
   </header>
 
   <nav>
@@ -90,14 +90,15 @@
   </nav>
 
   <section id="about">
-    <h2>Эрүүл амьдрах ухаан гэж юу вэ?</h2>
-    <p>Монголчууд эртнээс малчин ахуй, байгальд ойр амьдралаар эрүүл, тэнцвэртэй амьдрах арга ухааныг уламжлуулж хэрэглэж ирсэн. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдралын хэв маяг, сэтгэл зүйгээ зөв удирдах гэх мэт олон зүйлс багтдаг.</p>
-  
+    <h2>Амьдралын ухаан ба уламжлал</h2>
+    <p>Монголчууд эртнээс байгальд ойр, тэнцвэртэй амьдрах арга ухааныг эзэмшиж байжээ. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдарлын хэв маяг, өөрийн болон бусдын сэтгэл зүйг зөв удирдан чиглүүлэх гэх мэт олон зүйлс багтана.</p>
+    <img src="https://cdn.pixabay.com/photo/2017/06/19/18/17/mongolia-2419573_1280.jpg" alt="Монгол амьдралын хэв маяг" class="lesson-img">
+  </section>
 
   <section id="lesson" class="lesson">
     <h2>Хичээл</h2>
-    <p>Доорх хичээлүүдээр дамжуулан уламжлалт анагаах ухаанаар эрүүл мэндээ хамгаалаарай.</p>
-  
+    <p>Доорх хичээлүүдээр дамжуулан уламжлалт анагаах ухааны мэдлэгээ нэмэгдүүлээрэй.</p>
+    <img src="https://images.unsplash.com/photo-1601049484903-e50c9687c0b6?auto=format&fit=crop&w=1280&q=80" alt="Монгол эмэгтэй харж байгаа" class="lesson-img">
     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
   </section>
 
@@ -118,4 +119,3 @@
   </section>
 </body>
 </html>
-
