--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     }
     nav {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       background: rgba(255, 255, 255, 0.2);
       padding: 1rem;
       backdrop-filter: blur(10px);
     }
     nav a {
-      margin: 0 1rem;
+      margin: 0.5rem;
       text-decoration: none;
       color: #fff;
       font-weight: bold;
@@ -75,6 +76,27 @@
       border-radius: 8px;
       cursor: pointer;
     }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.5rem;
+      }
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      nav a {
+        margin: 0.3rem 0;
+      }
+      section {
+        padding: 1rem;
+        margin: 0.5rem;
+      }
+      iframe {
+        height: 200px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -98,7 +120,7 @@
   <section id="lesson" class="lesson">
     <h2>Хичээл</h2>
     <p>Доорх хичээлүүдээр дамжуулан уламжлалт анагаах ухааны мэдлэгээ нэмэгдүүлээрэй.</p>
-    <img src="https://images.unsplash.com/photo-1601049484903-e50c9687c0b6?auto=format&fit=crop&w=1280&q=80" alt="Монгол эмэгтэй харж байгаа" class="lesson-img">
+    <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=1280&q=80" alt="Монгол эмэгтэй эгц харж буй" class="lesson-img">
     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
   </section>
 
@@ -119,4 +141,3 @@
   </section>
 </body>
 </html>
-
