--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <section id="lesson" class="lesson">
     <h2>Хичээл</h2>
     <p>Доорх хичээлүүдээр дамжуулан уламжлалт анагаах ухааны мэдлэгээ нэмэгдүүлээрэй.</p>
-    <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=1280&q=80" alt="Монгол эмэгтэй эгц харж буй" class="lesson-img">
+    <img src="https://images.unsplash.com/photo-1601049484903-e50c9687c0b6?auto=format&fit=crop&w=1280&q=80" alt="Монгол эмэгтэй харж байгаа" class="lesson-img">
     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
   </section>
 
