--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
   </nav>
 
   <section id="about">
-    <h2>Амьдралын ухаан ба уламжлал</h2>
-    <p>Монголчууд эртнээс байгальд ойр, тэнцвэртэй амьдрах арга ухааныг эзэмшиж байжээ. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдарлын хэв маяг, өөрийн болон бусдын сэтгэл зүйг зөв удирдан чиглүүлэх гэх мэт олон зүйлс багтана.</p>
+    <h2>Танилцуулга</h2>
+    <p>Монголчууд эртнээс байгальд ойр, тэнцвэртэй амьдрах арга ухааныг эзэмшиж байжээ. Үүнд хүнсний зохистой хэрэглээ, дөрвөн улиралд тохирсон амьдралын хэв маяг, сэтгэл зүй, уламжлалт эмчилгээ зэргийг багтаана.</p>
     <img src="https://cdn.pixabay.com/photo/2017/06/19/18/17/mongolia-2419573_1280.jpg" alt="Монгол амьдралын хэв маяг" class="lesson-img">
   </section>
 
