--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: url('https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background: #1a1a1a url('https://images.unsplash.com/photo-1581093588401-ae6c6c4c5385?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
     header {
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.7);
       color: white;
       padding: 2rem;
       text-align: center;
@@ -22,28 +22,28 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(0, 0, 0, 0.5);
       padding: 1rem;
       backdrop-filter: blur(10px);
     }
     nav a {
       margin: 0.5rem;
       text-decoration: none;
-      color: #fff;
+      color: #ffffff;
       font-weight: bold;
     }
     section {
       padding: 2rem;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.6);
       margin: 1rem;
       border-radius: 12px;
     }
     .lesson, .contact, .other {
       margin-top: 2rem;
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.05);
       padding: 1rem;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
     }
     iframe {
       width: 100%;
@@ -62,8 +62,8 @@
       color: #fff;
     }
     input, textarea {
-      background: rgba(255, 255, 255, 0.2);
-      border: 1px solid #ccc;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid #666;
       padding: 0.5rem;
       color: #fff;
       border-radius: 6px;
@@ -77,7 +77,6 @@
       cursor: pointer;
     }
 
-    /* Responsive Design */
     @media (max-width: 768px) {
       header h1 {
         font-size: 1.5rem;
@@ -141,3 +140,4 @@
   </section>
 </body>
 </html>
+
