--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #1a1a1a url('https://images.unsplash.com/photo-1581093588401-ae6c6c4c5385?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1549887534-9dceda75b008?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
     }
     header {
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.6);
       color: white;
       padding: 2rem;
       text-align: center;
@@ -22,7 +22,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.4);
       padding: 1rem;
       backdrop-filter: blur(10px);
     }
@@ -34,7 +34,7 @@
     }
     section {
       padding: 2rem;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.5);
       margin: 1rem;
       border-radius: 12px;
     }
